# exp-decoder-python

./: .gitignore  README.md  SCHEMA.md  pyproject.toml
src/exp_file/: __init__.py  __main__.py  cli.py  decode.py  shared.py
src/exp_file/decode/: exp.py
src/exp_file/structure/: __init__.py  exp.py
